updated composer.json file

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "phpunit/dbunit": "@stable",
     "phpunit/phpunit": "@stable",
     "ramsey/uuid": "@stable",
-    "roav/better-reflection": "dev-master#a402048"
+    "roave/better-reflection": "dev-master#a402048"
   },
 
   "scripts": {
