added swift mailer to composer.json https://app.asana.com/0/464883007022852/467644529174382

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "phpunit/dbunit": "@stable",
     "phpunit/phpunit": "@stable",
     "ramsey/uuid": "@stable",
-    "roave/better-reflection": "dev-master#402048"
+    "roave/better-reflection": "dev-master#402048",
+    "swiftmailer/swiftmailer": "@stable"
   },
 
   "scripts": {
