--- a/public_html/api/rating/.htaccess
+++ b/public_html/api/rating/.htaccess
@@ -1,6 +1,6 @@
-fModule mod_rewrite.c>
-RewriteEngine on
+<IfModule mode.rewrite.c>
+	RewriteEngine on
 	RewriteCond %{REQUEST_FILENAME} !-f
 	RewriteCond %{REQUEST_FILENAME} !-d
-	RewriteRule ^/?([\da-f]{8}-[\da-f]{4}-[\da-f]{4}-[\da-f]{4}-[\da-f]{12})?$ ?profileId=$1&%{QUERY_STRING}
+	RewriteRule ^/?([\da-f]{8}-[\da-f]{4}-[\da-f]{4}-[\da-f]{4}-[\da-f]{12})?$ ?id=$1&%{QUERY_STRING}
 </IfModule>
