updated angular files to ensure complete build

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
 
   "scripts": {
     "apigen": "./vendor/bin/apigen generate ./php/classes/*.php --destination doc",
-    "phpunit": "./vendor/bin/phpunit -c ./php/classes/Test --coverage-html coverage"
+    "phpunit": "./vendor/bin/phpunit -c ./php/classes/Test --coverage-html coverage",
+    "apiUnit" : "./vendor/bin/phpunit -c ./php/classes/ApiTest --coverage-html coverage"
   }
 }
