--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/deepdivedylan/angular5-example.git"
+    "url": "https://github.com/deepdivedylan/data-design.git"
   },
   "dependencies": {
     "@angular/common": "^5.0.0",
@@ -22,17 +22,21 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@auth0/angular-jwt": "^1.0.0-beta.9",
     "core-js": "^2.5.1",
-    "rxjs": "^5.5.2",
     "jquery": "^3.2.1",
+    "jwt-decode": "^2.2.0",
+    "ng2-cookies": "^1.0.12",
+    "rxjs": "^5.5.2",
     "zone.js": "^0.8.18"
   },
   "devDependencies": {
     "@types/node": "^8.0.47",
     "awesome-typescript-loader": "^3.3.0",
-    "bootstrap-loader": "^2.2.0",
     "bootstrap": "^4.0.0-beta.2",
+    "bootstrap-loader": "^2.2.0",
     "css-loader": "^0.28.7",
+    "eslint": "^4.11.0",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^1.1.5",
     "font-awesome": "^4.7.0",
@@ -43,7 +47,7 @@
     "less-loader": "^4.0.5",
     "node-sass": "^4.5.3",
     "null-loader": "^0.1.1",
-    "popper.js": "^1.12.6",
+    "popper.js": "^1.13.0",
     "raw-loader": "^0.5.1",
     "resolve-url-loader": "^2.2.0",
     "rimraf": "^2.6.2",
