--- a/package.json
+++ b/package.json
@@ -15,23 +15,24 @@
     "url": "https://github.com/deepdivedylan/data-design.git"
   },
   "dependencies": {
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
+    "@angular/common": "^5.1.0",
+    "@angular/compiler": "^5.1.0",
+    "@angular/core": "^5.1.0",
+    "@angular/forms": "^5.1.0",
+    "@angular/platform-browser": "^5.1.0",
+    "@angular/platform-browser-dynamic": "^5.1.0",
+    "@angular/router": "^5.1.0",
     "@auth0/angular-jwt": "^1.0.0-beta.9",
     "core-js": "^2.5.1",
     "jquery": "^3.2.1",
     "jwt-decode": "^2.2.0",
     "ng2-cookies": "^1.0.12",
-    "rxjs": "^5.5.4",
+    "ng2-file-upload": "^1.3.0",
+    "rxjs": "^5.5.5",
     "zone.js": "^0.8.18"
   },
   "devDependencies": {
-    "@types/node": "^8.0.55",
+    "@types/node": "^8.0.56",
     "awesome-typescript-loader": "^3.3.0",
     "bootstrap": "^4.0.0-beta.2",
     "bootstrap-loader": "^2.2.0",
@@ -56,7 +57,7 @@
     "typescript": "^2.6.1",
     "url-loader": "^0.6.2",
     "webpack": "^2.7.0",
-    "webpack-dev-server": "^2.9.3",
+    "webpack-dev-server": "^2.9.6",
     "webpack-merge": "^4.1.1"
   }
 }
