--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jquery": "^3.2.1",
     "jwt-decode": "^2.2.0",
     "ng2-cookies": "^1.0.12",
+    "ng2-datepicker": "^2.1.6",
     "ng2-file-upload": "^1.3.0",
     "rxjs": "^5.5.5",
     "zone.js": "^0.8.18"
