updated create event form to angular template form

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@angular/platform-browser-dynamic": "^5.1.0",
     "@angular/router": "^5.1.0",
     "@auth0/angular-jwt": "^1.0.0-beta.9",
-    "core-js": "^2.5.1",
+    "angular4-datepicker": "^1.0.1",
+    "core-js": "^2.5.2",
     "jquery": "^3.2.1",
     "jwt-decode": "^2.2.0",
     "ng2-cookies": "^1.0.12",
@@ -38,7 +39,7 @@
     "bootstrap": "^4.0.0-beta.2",
     "bootstrap-loader": "^2.2.0",
     "css-loader": "^0.28.7",
-    "eslint": "^4.11.0",
+    "eslint": "^4.13.0",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^1.1.5",
     "font-awesome": "^4.7.0",
