--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "url": "https://github.com/deepdivedylan/data-design.git"
   },
   "dependencies": {
+    "@angular/animations": "^5.1.0",
     "@angular/common": "^5.1.0",
     "@angular/compiler": "^5.1.0",
     "@angular/core": "^5.1.0",
@@ -23,18 +24,17 @@
     "@angular/platform-browser-dynamic": "^5.1.0",
     "@angular/router": "^5.1.0",
     "@auth0/angular-jwt": "^1.0.0-beta.9",
-    "angular4-datepicker": "^1.0.1",
     "core-js": "^2.5.2",
     "jquery": "^3.2.1",
     "jwt-decode": "^2.2.0",
+    "ng-pick-datetime": "^5.0.0-beta.15",
     "ng2-cookies": "^1.0.12",
-    "ng2-datepicker": "^2.1.6",
     "ng2-file-upload": "^1.3.0",
     "rxjs": "^5.5.5",
     "zone.js": "^0.8.18"
   },
   "devDependencies": {
-    "@types/node": "^8.0.57",
+    "@types/node": "^8.0.58",
     "awesome-typescript-loader": "^3.3.0",
     "bootstrap": "^4.0.0-beta.2",
     "bootstrap-loader": "^2.2.0",
@@ -52,7 +52,7 @@
     "null-loader": "^0.1.1",
     "popper.js": "^1.13.0",
     "raw-loader": "^0.5.1",
-    "resolve-url-loader": "^2.2.0",
+    "resolve-url-loader": "^2.2.1",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
