--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "@angular/platform-browser-dynamic": "^5.1.0",
     "@angular/router": "^5.1.0",
     "@auth0/angular-jwt": "^1.0.0-beta.9",
-    "core-js": "^2.5.2",
+    "core-js": "^2.5.3",
+    "date-fns": "^1.29.0",
     "jquery": "^3.2.1",
     "jwt-decode": "^2.2.0",
-    "ng-pick-datetime": "^5.0.0-beta.15",
     "ng2-cookies": "^1.0.12",
     "ng2-file-upload": "^1.3.0",
     "rxjs": "^5.5.5",
@@ -39,7 +39,7 @@
     "bootstrap": "^4.0.0-beta.2",
     "bootstrap-loader": "^2.2.0",
     "css-loader": "^0.28.7",
-    "eslint": "^4.13.0",
+    "eslint": "^4.13.1",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^1.1.5",
     "font-awesome": "^4.7.0",
