--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@auth0/angular-jwt": "^1.0.0-beta.9",
     "core-js": "^2.5.3",
     "date-fns": "^1.29.0",
+    "filter": "^0.1.1",
     "jquery": "^3.2.1",
     "jwt-decode": "^2.2.0",
     "ng2-cookies": "^1.0.12",
     "ng2-file-upload": "^1.3.0",
+    "ng2-search": "0.0.1",
     "rxjs": "^5.5.5",
     "zone.js": "^0.8.18"
   },
