fixed .htaccess files

--- a/public_html/api/image/.htaccess
+++ b/public_html/api/image/.htaccess
@@ -3,5 +3,5 @@
 RewriteEngine on
 RewriteCond %{REQUEST_ACCESS} !-f
 RewriteCond %{REQUEST_ACCESS} !-d
-RewriteRule ^/?(\d+)?$ ?id=$1&%{QUERY_STRING}
+RewriteRule ^/?([\da-f]{8}-[\da-f]{4}-[\da-f]{4}-[\da-f]{4}-[\da-f]{12})?$ ?id=$1&%{QUERY_STRING}
 </IfModule>
